--- a/src/views/partials/headerNavBar.ejs
+++ b/src/views/partials/headerNavBar.ejs
@@ -1,6 +1,6 @@
 <nav class="navegacion">
     <ul>
-        <li><a href="/store#hoodies">Hoodies</a></li>
+        <li><a href="/store">Hoodies</a></li>
         <li><a href="/store#jeans">Jeans</a></li>
         <li><a href="/store#remeras">Remeras</a></li>
         <li><a href="/store#camperas">Camperas</a></li>
