empece crear productos

--- a/src/views/newProduct.ejs
+++ b/src/views/newProduct.ejs
@@ -31,7 +31,7 @@
                     <h4>Elije tu foto de producto</h4>
                     <br>
             
-                <input type="file" accept=".jpg,.png" name="imagen" class="productos" id="fotoProducto">
+                <input type="file"  name="imagen" class="productos" id="fotoProducto">
                 </div>
 
                 <div class="inputs">
