--- a/src/views/store.ejs
+++ b/src/views/store.ejs
@@ -36,7 +36,7 @@
                 <div class="product-container">
                     <h3>Nombre : <%= product.nombreProducto %> </h3>
                     <h4>Talla : <%= product.tamaño %> </h4>
-                    <img src= "/images/store/<%= product.img %>">
+                    <img src= "/images/store/<%= product.image %>">
                     <p> $<%= (product.precio) %></p>
                     <p><%= (product.descripcion) %></p>
                     <button class="button-buy">Comprar</button>
