--- a/src/views/editProduct.ejs
+++ b/src/views/editProduct.ejs
@@ -11,10 +11,10 @@
 
 <body>
     <%- include ("./partials/headerMain")%>
-        <form action="/store/edit <%= productToEdit.id %>?_method=PATCH" method="POST" enctype="multipart/form-data">
+        <form action="/edit <%= productToEdit.id %>?_method=PATCH" method="POST" enctype="multipart/form-data">
             <div class="register-container">
 
-                <h1 class="title">Creacion y Edicion de Productos</h1>
+                <h1 class="title">Edicion de Productos</h1>
                 <div class="inputs">
                     <label for="nombreProducto">Nombre del Producto:</label>
                     <input type="text" name="nombreProducto" id="nombreProducto" placeholder="Nombre del producto" required>
@@ -67,7 +67,7 @@
                 <br>
             <br>
             
-                <button type="submit">Crear Producto</button>
+                <button type="submit">Editar Producto</button>
                 <button type="reset">Borrar</button>
             <br>
             <br>
