--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -5,47 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swip - Moda personalizada</title>
-    <link rel="shortcut icon" href="/images/logo/favicon.ico">
-    <link rel="stylesheet" href="./css/styles.css">
+    <title>Swip - Registrarse</title>
     <link rel="stylesheet" href="./css/register.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    rel="stylesheet"/>
-    <link href="https://use.fontawesome.com/releases/v5.0.8/js/brands.js" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.0.4/js/v4-shims.js" rel="stylesheet"></script> 
-    <link href="https://use.fontawesome.com/releases/v5.0.4/js/fontawesome.js" rel="stylesheet"> </script>
 </head>
 
 <body>
-    <header>
-    <div class="encabezado">
-        <section>
-            <div class="logo">
-            <a href="/"><img src="/images/Logo/logo.png"></a>
-            </div>
-        </section>
-        <div class = "busqueda">
-            <input class="search-bar"></input>
-            <button class="fas fa-search"></button>
-        </div>
-        <div class="login">
-            <div >
-                <a href="/login"><i class="far fa-user-circle"></i></a> 
-            </div>
-            <div class="texto-login">
-                <p><a href="/login">Iniciar sesión</a></p>
-            </div>
-        </div>
-        <div class="compras">
-            <div class="bolsa">
-                <a href="/productCart"><i class="fas fa-shopping-bag"></i></a>
-            </div>
-            <div class="carritocompras">
-                <p><a href="/productCart">Carrito de compras</a></p>
-            </div>
-        </div>
-    </div>
-    </header>
+    <%- include ("./partials/headerMain")%>
     <main>
             <div class="tituloregistro">
             <h4>Registrarse</h4>
