--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,71 +1,100 @@
-.tituloregistro{
-    margin-top: 20px; 
-}
-
-.registrarse{
+.tituloregistro {
     margin-top: 20px;
-    border-color: black;
-}
-
-.texto-error{
-    color: red;
-    width: 5px;
-}
-
-.avatar{
-    display: flex;
-    justify-content: center;
-    margin: 17px;
-}
-
-
-.tituloregistro{
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
     font-size: 30px;
 }
 
-.nombreregistro{
+.registrarse {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-image: url(../images/fondos/fondo1.jpg);
+    padding: 2rem;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    color: rgb(255, 255, 255);
+    border-color: black;
+    /* display: flex;
+    justify-content: center; */
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-left: 320px;
+    margin-right: 320px;
+}
+
+
+
+.texto-error {
+    color: red;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.avatar {
+    display: flex;
+    justify-content: center;
+    margin: 17px;
+}
+
+
+.tituloregistro {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+    font-size: 30px;
+}
+
+.nombreregistro {
     display: flex;
     justify-content: center;
     margin: 5px;
-    
+
 }
 
-.apellidosregistro{
+.apellidosregistro {
     display: flex;
     justify-content: center;
     margin: 5px;
 }
 
-.emaillogin{
+.emaillogin {
     display: flex;
     justify-content: center;
     margin: 5px;
 }
 
-.emaillogin label{
+.emaillogin label {
     display: flex;
     justify-content: center;
     margin: 5px;
 }
 
-.passwordlogin{
+.passwordlogin {
     display: flex;
     justify-content: center;
     margin: 5px;
-    
+
 }
 
-.passwordconfirm{
+.passwordconfirm {
     display: flex;
     justify-content: center;
     margin: 5px;
 }
 
-.botonregistro{
+.botonregistro {
     display: flex;
-    justify-content: center; 
-   
+    justify-content: center;    
 }
+
+.boton-registro{
+    color: black;
+    border-bottom: 1px solid white;
+    padding: 8px;
+    border-radius: 7px;
+}
+
