--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -12,13 +12,13 @@
 <body>
     <%- include ("./partials/headerMain")%>
     <main>
-        <form action="/login" method="post">
+        <form action="/login" method="POST">
           <div class="register-container">
     
             <h1 class="title">Ingresar</h1>
             <div class="inputs">
               <label for="mail">Correo electrónico</label>
-              <input type="email" name="mail" id="mail" placeholder="Correo electrónico" required>
+              <input type="email" name="email" id="email" placeholder="Correo electrónico" required>
             </div>  
             <div class="inputs">
               <label for="password">Contraseña</label>
@@ -27,70 +27,15 @@
             <div class="account-buttons">
             <button type="submit" class="account sub">Iniciar sesión</button>
             </div>
-           
         </form>
+        <h4>¿No tienes una cuenta? ¡Registrate!</h4>
+        <br>
+        <div class="account-buttons">
+            <button class="account sub"><a href="/register">Registrarse</a></button>
+        </div>
       </main>
 
-    <footer>
-        <div class="tres_columnas">
-        <div class="col1footer">
-            <section>
-                <h4>Ayuda</h4>
-            </section>
-            <section>
-                <ul>
-                    <li>Envios</li>
-                    <li>Preguntas Frecuentes</li>
-                    <li>Como Devolver</li>
-                </ul>
-            </section>
-        </div>
-        <div class="col2footer">
-            <section>
-                <h4>Equipo</h4>
-            </section>
-            <section>
-                <div class="equipo">
-                <div>
-                    <img src="" alt="">
-                    <p>Milagros</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>David</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>Julieth</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>Lautaro</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>Juan</p>
-                </div>
-            </div>
-            </section>
-        </div>
-        <div class="col3footer">
-            <section>
-                <h4>Redes Sociales</h4>
-            </section>
-            <section class="redes">
-                <div><a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a></div>
-                <div><a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a></div>
-                <div><a href="https://web.whatsapp.com/"><i class="fab fa-whatsapp"></i></a></div>
-                <div><i class="fas fa-at"></i>
-                </i></div>
-            </section>
-        </div>
-    </div>
-        <div class="derechos">
-            <p>@SWIP, Todos los derechos reservados</p>
-        </div>
-    </footer>
+      <%- include ("./partials/footer")%>
 </body>
 
 </html>
