--- a/public/css/login.css
+++ b/public/css/login.css
@@ -38,7 +38,7 @@
     padding: 2rem;
     border-radius: 0px;
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    margin-top: 40vh;
+    margin-top: 60vh;
     transform: translateY(-50%);
     background-image: url(../images/fondos/fondo1.jpg);
   }
@@ -118,4 +118,13 @@
     align-items: center;
     width: 100%;
     height: 100%;
+  }
+  
+  h4{
+    text-align: center;
+  }
+
+  a{
+    text-decoration: none;
+    color: aliceblue;
   }
