--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -11,114 +11,147 @@
 
 <body>
     <%- include ("./partials/headerMain")%>
-    <main>
+        <main>
             <div class="tituloregistro">
-            <h4>Registrarse</h4>
+                <h4>Registrarse</h4>
             </div class="registro">
-            <form action="/" method="get">
-            
-            <div class="nombreregistro">
-            <label for="nombre">Nombre</label>
-            </div>
-            <div class="nombreregistro">
-            <input type="text" name="nombre"  >
-            </div>
+                            <!-- Formulario que apunta a register, viaja por POST Y el enctype indica que es información que viene con archivos -->
+                            <form action="/register" method="POST" enctype="multipart/form-data">
+                            <div class="registrarse">
+                                <div class="nombreregistro">
+                                    <label for="nombre">Nombre</label>
+                                </div>
+                                <div class="nombreregistro">
+                                    <input type="text" name="nombre" value ="<%= locals.old ? old.nombre: null %>">
+                                </div>
+                                <% if (locals.errors && errors.nombre) { %>
+                                    <div class="texto-error">
+                                        <%= errors.nombre.msg %>
+                                    </div>
+                                    <% } %>
+                                        <div class="apellidosregistro">
+                                            <label for="apellidos">Apellidos</label>
+                                        </div>
+                                        <div class="apellidosregistro">
+                                            <input type="text" name="apellidos" value ="<%= locals.old ? old.apellidos: null %>">
+                                        </div>
+                                        <% if (locals.errors && errors.apellidos) { %>
+                                            <div class="texto-error">
+                                                <%= errors.apellidos.msg %>
+                                            </div>
+                                            <% } %>
 
-            <div class="apellidosregistro">
-            <label for="apellidos">Apellidos</label>
-            </div>
-            <div class="apellidosregistro">
-            <input type="text" name="apellidos"  >
-            </div>
+                                        <div class="emaillogin">
+                                            <label for="email">Correo Electronico</label>
+                                        </div>
+                                        <div class="emaillogin">
+                                            <input type="email" name="email" value ="<%= locals.old ? old.email: null %>">
+                                        </div>
+                                        <% if (locals.errors && errors.email) { %>
+                                            <div class="texto-error">
+                                                <%= errors.email.msg %>
+                                            </div>
+                                            <% } %>
 
-            <div class="emaillogin">
-            <label for="email">Correo Electronico</label>
-            </div>
-            <div class="emaillogin">
-            <input type="email" name="email"  >
-            </div>
+                                        <div class="passwordlogin">
+                                            <label for="password">Contraseña</label>
+                                        </div>
+                                        <div class="passwordlogin">
+                                            <input type="password" name="contraseña">
+                                        </div>
+                                        <% if (locals.errors && errors.contraseña) { %>
+                                            <div class="texto-error">
+                                                <%= errors.contraseña.msg %>
+                                            </div>
+                                            <% } %>
 
-            <div class="passwordlogin">
-            <label for="password">Contraseña</label>
-            </div>
-            <div class="passwordlogin">
-            <input type="password" name="contraseña">
-            </div>
+                                        <div class="passwordconfirm">
+                                            <label for="passwordconfirm">Confirmar Contraseña</label>
+                                        </div>
 
-            <div class="passwordconfirm">
-            <label for="passwordconfirm">Confirmar Contraseña</label>
-            </div>
-            <div class="passwordconfirm">
-            <input type="password" name="passwordconfirm">
-            </div>
+                                        <div class="passwordconfirm">
+                                            <input type="password" name="passwordconfirm">
+                                        </div>
 
-            <div class="botonregistro">
-            <button type="iniciosesion">Registrarse</button>
-            </div>
-            
-        </form>
-    </main>
+                                        <% if (locals.errors && errors.contraseña) { %>
+                                            <div class="texto-error">
+                                                <%= errors.contraseña.msg %>
+                                            </div>
+                                            <% } %>
 
-    <footer>
-        <div class="tres_columnas">
-        <div class="col1footer">
-            <section>
-                <h4>Ayuda</h4>
-            </section>
-            <section>
-                <ul>
-                    <li>Envios</li>
-                    <li>Preguntas Frecuentes</li>
-                    <li>Como Devolver</li>
-                </ul>
-            </section>
-        </div>
-        <div class="col2footer">
-            <section>
-                <h4>Equipo</h4>
-            </section>
-            <section>
-                <div class="equipo">
-                <div>
-                    <img src="" alt="">
-                    <p>Milagros</p>
+                                        <div class="avatar">
+                                            <h4 class="title">Elije la foto del producto</h4>
+                                            <input type="file" name="avatar" class="avatar-profile" id="foto-Profile">
+                                        </div>
+
+                                        <div class="botonregistro">
+                                            <button type="iniciosesion" class="boton-registro">Registrarse</button>
+                                        </div>
+
+                            </div>
+                            </form>
+        </main>
+
+        <footer>
+            <div class="tres_columnas">
+                <div class="col1footer">
+                    <section>
+                        <h4>Ayuda</h4>
+                    </section>
+                    <section>
+                        <ul>
+                            <li>Envios</li>
+                            <li>Preguntas Frecuentes</li>
+                            <li>Como Devolver</li>
+                        </ul>
+                    </section>
                 </div>
-                <div>
-                    <img src="" alt="">
-                    <p>David</p>
+                <div class="col2footer">
+                    <section>
+                        <h4>Equipo</h4>
+                    </section>
+                    <section>
+                        <div class="equipo">
+                            <div>
+                                <img src="" alt="">
+                                <p>Milagros</p>
+                            </div>
+                            <div>
+                                <img src="" alt="">
+                                <p>David</p>
+                            </div>
+                            <div>
+                                <img src="" alt="">
+                                <p>Julieth</p>
+                            </div>
+                            <div>
+                                <img src="" alt="">
+                                <p>Lautaro</p>
+                            </div>
+                            <div>
+                                <img src="" alt="">
+                                <p>Juan</p>
+                            </div>
+                        </div>
+                    </section>
                 </div>
-                <div>
-                    <img src="" alt="">
-                    <p>Julieth</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>Lautaro</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>Juan</p>
+                <div class="col3footer">
+                    <section>
+                        <h4>Redes Sociales</h4>
+                    </section>
+                    <section class="redes">
+                        <div><a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a></div>
+                        <div><a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a></div>
+                        <div><a href="https://web.whatsapp.com/"><i class="fab fa-whatsapp"></i></a></div>
+                        <div><i class="fas fa-at"></i>
+                            </i></div>
+                    </section>
                 </div>
             </div>
-            </section>
-        </div>
-        <div class="col3footer">
-            <section>
-                <h4>Redes Sociales</h4>
-            </section>
-            <section class="redes">
-                <div><a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a></div>
-                <div><a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a></div>
-                <div><a href="https://web.whatsapp.com/"><i class="fab fa-whatsapp"></i></a></div>
-                <div><i class="fas fa-at"></i>
-                </i></div>
-            </section>
-        </div>
-    </div>
-        <div class="derechos">
-            <p>@SWIP, Todos los derechos reservados</p>
-        </div>
-    </footer>
+            <div class="derechos">
+                <p>@SWIP, Todos los derechos reservados</p>
+            </div>
+        </footer>
 </body>
 
 </html>
