--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,130 +1,127 @@
+.formCompleto{
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+
 .titulologin{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
-    font-size: 30px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+  font-size: 30px;
 }
 
 .emaillogin{
-    display: flex;
-    justify-content: center;
-    
+  display: flex;
+  justify-content: center;
 }
 
 .emaillogin label{
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .passwordlogin{
-    display: flex;
-    justify-content: center;
-    
+  display: flex;
+  justify-content: center;
+  
 }
 
 .botonlogin1{
-    display: flex;
-    justify-content: center; 
+  display: flex;
+  justify-content: center; 
 }
 
 .register-container {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: flex-start;
-    background-color: #ffffffdc;
-    color:rgb(255, 255, 255);
-    width: 40%;
-    padding: 2rem;
-    border-radius: 0px;
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    margin-top: 60vh;
-    transform: translateY(-50%);
-    background-image: url(../images/fondos/fondo1.jpg);
-  }
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: #ffffffdc;
+  color:rgb(255, 255, 255);
+  width: 40%;
+  padding: 2rem;
+  border-radius: 0px;
+  box-shadow: 0px 0px 10px rgb(100, 100, 100);
+  margin-top: 40vh;
+  transform: translateY(-50%);
+  background-image: url(../images/fondos/fondo1.jpg);
+}
 
-  input {
-    background-color: #d4d4d434;
-    font-size: 1rem;
-    border-radius: 5px;
-    color: rgb(255, 255, 255);
-    margin: 1rem 0;
-  }
-  
-  input::placeholder {
-    color: rgb(139, 133, 133);
-  }
-  
-  input:focus {
-    background-color: #000000;
-    color: black;
-    font-weight: bold;
-  }
-  
-  input:invalid {
-    border-bottom: 2px solid ;
-  }
-  
-  .inputs {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 100%;
-  }
-  
-  .inputs input {
-    width: 100%;
-    padding: 0.5rem;
-    color: white;
-    border: none;
-    border-bottom: 1px solid rgb(100, 100, 100);
-  }
+input {
+  background-color: #d4d4d434;
+  font-size: 1rem;
+  border-radius: 5px;
+  color: rgb(255, 255, 255);
+  margin: 1rem 0;
+}
 
-  .account-buttons {
-    display: flex	;
-    gap: 1rem;
-    margin-bottom: 2rem;
-    padding-bottom: 2rem;
-    border-bottom: 1px solid white;
-  }
+input::placeholder {
+  color: rgb(139, 133, 133);
+}
 
-  .account {
-    font-size: 1rem;
-    padding: 0.5rem;
-    width: 100%;
-    border-radius: 1px;
-  }
-  
-  .account.res {
-    background-color: transparent;
-    color: white;
-    border: 1px solid white;
-  }
-  
-  .account.sub {
-    background-color: #686565d5;
-    color:rgb(255, 255, 255) (255, 255, 255);
-    border: 1px solid transparent;
-  }
+input:focus {
+  background-color: #000000;
+  color: black;
+  font-weight: bold;
+}
 
-  main {
-    height: 100%;
-  }
-  
-  main form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-  }
-  
-  h4{
-    text-align: center;
-  }
+input:invalid {
+  border-bottom: 2px solid ;
+}
 
-  a{
-    text-decoration: none;
-    color: aliceblue;
-  }
+.inputs {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.inputs input {
+  width: 100%;
+  padding: 0.5rem;
+  color: white;
+  border: none;
+  border-bottom: 1px solid rgb(100, 100, 100);
+}
+
+.account-buttons {
+  display: flex	;
+  gap: 1rem;
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+  border-bottom: 1px solid white;
+}
+
+.account {
+  font-size: 1rem;
+  padding: 0.5rem;
+  width: 100%;
+  border-radius: 1px;
+}
+
+.account.res {
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
+}
+
+.account.sub {
+  background-color: #686565d5;
+  color:rgb(255, 255, 255) (255, 255, 255);
+  border: 1px solid transparent;
+}
+
+main {
+  height: 100%;
+}
+
+main form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
